control-plane-operator/controllers/hostedcontrolplane/testdata/router-infra/AWS_Public_KAS_LoadBalancer/zz_fixture_TestRouterInfrastructureWithStrategies_When_AWS_is_Public_with_KAS_LoadBalancer_route_oauth.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oauth
  namespace: hcp-namespace
  ownerReferences:
  - apiVersion: hypershift.openshift.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: HostedControlPlane
    name: hcp
    uid: ""
  resourceVersion: "1"
spec:
  host: oauth.example.com
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: oauth-openshift
    weight: null
status: {}
